--- a/pagina1.html
+++ b/pagina1.html
@@ -18,6 +18,13 @@
     </header>
     <main>
         <h1>Apresentação | Sobre mim</h1>
+        <div>
+            <div class="foto"></div>
+        </div>
+        <div>
+            <p>Me chamo Paulo, tenho 16 anos e sou um jovem curioso em busca dos meus primeiros grandes passos no mundo. Adoro explorar coisas novas, desde games e tecnologia até música e criatividade, sempre aprendendo com cada experiência. Sou movido por desafios que me façam crescer, seja nos estudos, nos hobbies ou nas conexões com pessoas. Acredito que a vida é feita de tentativas, erros e muitas descobertas—e estou pronto para aproveitar cada momento desse caminho. Se quiser trocar ideias ou compartilhar algo interessante, é só chamar!</p>
+        </div>
+
     </main>
 </body>
 </html>
